feat: introduce Tessera, pixel-perfect Minecraft image-rendering library
Replaces the prior Jigsaw prototype with an 8-module Maven reactor under
net.aerh.tessera, published as tessera-1.0.0 on JitPack.

Modules:
- tessera-api: public fluent API, sealed request markers, asset provider SPI
- tessera-spi: six consumer-extension SPIs (NBT, fonts, overlays, generators)
- tessera-bom: version-managed dependency aggregator
- tessera-core: DefaultEngine implementation, sealed CoreRenderRequest dispatch,
  atlas + font + overlay providers, NBT parsing, output encoders
- tessera-assets-26.1.2: AssetProvider for MC 26.1.2, no vanilla Mojang bytes,
  TesseraAssets.fetch bootstrap with SHA-1 integrity + EULA gate
- tessera-testkit: SSIM + deltaE76 + GoldenImageAssertion, downstream ArchUnit rules
- tessera-http: skeleton module reserved for the forthcoming HTTP adapter
- skyblock: in-repo consumer demonstrating the SPI surface

Key surfaces:
- Engine.builder().minecraftVersion("26.1.2").acceptMojangEula(true).build()
- Seven fluent entry points (item, tooltip, inventory, playerHead, playerModel,
  composite, fromNbt) with terminal .render() / .renderAsync()
- AnimatedEncoder ServiceLoader discovery, webp4j-core + animated-gif-lib
- BoundedVirtualExecutor per engine, StartupCheck verifies all request types
  have generators, DefaultEngine.close() drains + flushes + shuts down idempotently
- Resource-pack pipeline with zip-slip + path-traversal guards, OutputSizeGate
  with 8 MB static / 24 MB animated caps, NBT dialect detector (5 formats)
- Graphics2DFactory routes every Graphics2D with the four pixel-perfect rendering
  hints (AA=OFF, TextAA=OFF, FM=OFF, Interp=NEAREST_NEIGHBOR)

Quality gates:
- Five ArchUnit boundary tests, Graphics2DFactoryArchTest, NoLegacyPackagesTest
- Downstream consumers pick up noImportsFromTesseraCore via tessera-testkit
- GoldenFixturesTest harness with env-gated live-engine scenarios
- Capture-baselines GitHub Actions workflow (manual dispatch, JDK